manifest/objects/ALTF__Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Plan_Rollup_Value_Latest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the ID of the latest Account Manager Plan Rollup record. It is populated whenever the Scorecard batch job runs.</description>
        <label>Latest Account Manager Plan Rollup Value</label>
        <referenceTo>ALTF__Account_Plan_Roll_Up_Value__c</referenceTo>
        <relationshipLabel>Account Manager Plans</relationshipLabel>
        <relationshipName>AccountPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Plan_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Type</label>
        <referenceTo>ALTF__Account_Plan_Type__c</referenceTo>
        <relationshipLabel>Altify Account Manager Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Age__c</fullName>
        <formula>Now()-CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Auto_Chat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Post Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__CollaborationGroupId__c</fullName>
        <description>The id of the chatter group</description>
        <inlineHelpText>The id of the chatter group</inlineHelpText>
        <label>CollaborationGroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Days_In_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days In Plan (DEPRECATED)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Days_Since_Update__c</fullName>
        <formula>TODAY() - DATEVALUE(ALTF__Updated__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Max_Plan_End_Date__c</fullName>
        <label>Max Plan End Date</label>
        <summarizedField>ALTF__Account_Plan_Revenue_Target__c.ALTF__End_Date__c</summarizedField>
        <summaryForeignKey>ALTF__Account_Plan_Revenue_Target__c.ALTF__Account_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ALTF__Min_Plan_Start_Date__c</fullName>
        <label>Min Plan Start Date</label>
        <summarizedField>ALTF__Account_Plan_Revenue_Target__c.ALTF__Start_Date__c</summarizedField>
        <summaryForeignKey>ALTF__Account_Plan_Revenue_Target__c.ALTF__Account_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ALTF__Number_Of_Plan_Members__c</fullName>
        <label>Number Of Plan Members</label>
        <summaryForeignKey>ALTF__Account_Plan_Team_Member__c.ALTF__Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ALTF__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans_Owned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Plan_Status__c</fullName>
        <label>Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>closed</fullName>
                </value>
                <value>
                    <fullName>open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Revenue_Target__c</fullName>
        <label>Revenue Target</label>
        <summarizedField>ALTF__Account_Plan_Revenue_Target__c.ALTF__Revenue_Target__c</summarizedField>
        <summaryForeignKey>ALTF__Account_Plan_Revenue_Target__c.ALTF__Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ALTF__Scorecard_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scorecard Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Status__c</fullName>
        <formula>IF(ISBLANK(TEXT(ALTF__Plan_Status__c)), &apos;open&apos;, TEXT(ALTF__Plan_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the user who last updated the Account Manager Plan in Altify.  This field does not reflect changes made outside of Altify that may impact the Account Manager Plan, for example, deleting an opportunity in Salesforce but not in Altify would not update this field.</description>
        <inlineHelpText>This field indicates the user who last updated the Account Plan in Altify.  This field does not reflect changes made outside of Altify that may impact the Account Plan, for example, deleting an opportunity in Salesforce would not update this fi</inlineHelpText>
        <label>Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Updated__c</fullName>
        <description>This field indicates the update time of the Account Manager Plan in Altify. This field does not reflect changes made outside of Altify that may impact the Account Manager Plan, for example, deleting an opportunity in Salesforce but not in Altify would not update this field.</description>
        <inlineHelpText>This field indicates the update time of the Account Plan in Altify. This field does not reflect changes made outside of Altify that may impact the Account Plan, for example, deleting an opportunity in Salesforce would not update this field.</inlineHelpText>
        <label>Updated</label>
        <type>DateTime</type>
    </fields>
    <label>Altify Account Manager Plan</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <columns>NAME</columns>
        <columns>ALTF__Account_Plan_Type__c</columns>
        <columns>ALTF__Status__c</columns>
        <columns>ALTF__Owner__c</columns>
        <columns>ALTF__Revenue_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Manager Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>